// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autocompleteTermSuggestions autocomplete within query for |(is:blue jun)| with caret at position 11 1`] = `
Array [
  Object {
    "highlightRange": Object {
      "range": Array [
        9,
        17,
      ],
      "section": "body",
    },
    "query": Object {
      "body": "(is:blue tag:junk)",
      "fullText": "(is:blue tag:junk)",
      "helpText": undefined,
    },
    "type": 3,
  },
]
`;

exports[`autocompleteTermSuggestions autocomplete within query for |is:bow is:void| with caret at position 11 1`] = `
Array [
  Object {
    "highlightRange": Object {
      "range": Array [
        7,
        14,
      ],
      "section": "body",
    },
    "query": Object {
      "body": "is:bow is:void",
      "fullText": "is:bow is:void",
      "helpText": undefined,
    },
    "type": 3,
  },
]
`;

exports[`autocompleteTermSuggestions autocomplete within query for |is:haspower is:b| with caret at position 16 1`] = `
Array [
  Object {
    "highlightRange": Object {
      "range": Array [
        12,
        18,
      ],
      "section": "body",
    },
    "query": Object {
      "body": "is:haspower is:bow",
      "fullText": "is:haspower is:bow",
      "helpText": undefined,
    },
    "type": 3,
  },
  Object {
    "highlightRange": Object {
      "range": Array [
        12,
        19,
      ],
      "section": "body",
    },
    "query": Object {
      "body": "is:haspower is:blue",
      "fullText": "is:haspower is:blue",
      "helpText": undefined,
    },
    "type": 3,
  },
]
`;

exports[`autocompleteTermSuggestions autocomplete within query for |season:>outl| with caret at position 12 1`] = `Array []`;

exports[`filterComplete autocomplete terms for |is:b| 1`] = `
Array [
  "is:bow",
  "is:blue",
]
`;

exports[`filterComplete autocomplete terms for |jun| 1`] = `
Array [
  "tag:junk",
]
`;

exports[`filterComplete autocomplete terms for |ote| 1`] = `
Array [
  "notes:",
  "is:hasnotes",
  "is:emotes",
]
`;

exports[`filterComplete autocomplete terms for |sni| 1`] = `
Array [
  "is:sniperrifle",
]
`;

exports[`filterComplete autocomplete terms for |stat:| 1`] = `
Array [
  "stat:",
  "stat:rpm:",
  "stat:rof:",
  "stat:charge:",
  "stat:impact:",
  "stat:handling:",
  "stat:range:",
  "stat:stability:",
  "stat:reload:",
  "stat:magazine:",
  "stat:aimassist:",
  "stat:equipspeed:",
  "stat:shieldduration:",
  "stat:velocity:",
  "stat:blastradius:",
  "stat:recoildirection:",
  "stat:drawtime:",
  "stat:zoom:",
  "stat:airborne:",
  "stat:swingspeed:",
  "stat:guardefficiency:",
  "stat:guardresistance:",
  "stat:chargerate:",
  "stat:guardendurance:",
  "stat:ammocapacity:",
  "stat:mobility:",
  "stat:resilience:",
  "stat:recovery:",
  "stat:discipline:",
  "stat:intellect:",
  "stat:strength:",
  "stat:total:",
  "stat:custom:",
  "stat:any:",
  "stat:rpm:<",
  "stat:rpm:>",
  "stat:rof:<",
  "stat:rof:>",
  "stat:charge:<",
  "stat:charge:>",
  "stat:impact:<",
  "stat:impact:>",
  "stat:handling:<",
  "stat:handling:>",
  "stat:range:<",
  "stat:range:>",
  "stat:stability:<",
  "stat:stability:>",
  "stat:reload:<",
  "stat:reload:>",
  "stat:magazine:<",
  "stat:magazine:>",
  "stat:aimassist:<",
  "stat:aimassist:>",
  "stat:equipspeed:<",
  "stat:equipspeed:>",
  "stat:shieldduration:<",
  "stat:shieldduration:>",
  "stat:velocity:<",
  "stat:velocity:>",
  "stat:blastradius:<",
  "stat:blastradius:>",
  "stat:recoildirection:<",
  "stat:recoildirection:>",
  "stat:drawtime:<",
  "stat:drawtime:>",
  "stat:zoom:<",
  "stat:zoom:>",
  "stat:airborne:<",
  "stat:airborne:>",
  "stat:swingspeed:<",
  "stat:swingspeed:>",
  "stat:guardefficiency:<",
  "stat:guardefficiency:>",
  "stat:guardresistance:<",
  "stat:guardresistance:>",
  "stat:chargerate:<",
  "stat:chargerate:>",
  "stat:guardendurance:<",
  "stat:guardendurance:>",
  "stat:ammocapacity:<",
  "stat:ammocapacity:>",
  "stat:mobility:<",
  "stat:mobility:>",
  "stat:resilience:<",
  "stat:resilience:>",
  "stat:recovery:<",
  "stat:recovery:>",
  "stat:discipline:<",
  "stat:discipline:>",
  "stat:intellect:<",
  "stat:intellect:>",
  "stat:strength:<",
  "stat:strength:>",
  "stat:total:<",
  "stat:total:>",
  "stat:custom:<",
  "stat:custom:>",
  "stat:any:<",
  "stat:any:>",
  "stat:rpm:<=",
  "stat:rpm:>=",
  "stat:rof:<=",
  "stat:rof:>=",
  "stat:charge:<=",
  "stat:charge:>=",
  "stat:impact:<=",
  "stat:impact:>=",
  "stat:handling:<=",
  "stat:handling:>=",
  "stat:range:<=",
  "stat:range:>=",
  "stat:stability:<=",
  "stat:stability:>=",
  "stat:reload:<=",
  "stat:reload:>=",
  "stat:magazine:<=",
  "stat:magazine:>=",
  "stat:aimassist:<=",
  "stat:aimassist:>=",
  "stat:equipspeed:<=",
  "stat:equipspeed:>=",
  "stat:shieldduration:<=",
  "stat:shieldduration:>=",
  "stat:velocity:<=",
  "stat:velocity:>=",
  "stat:blastradius:<=",
  "stat:blastradius:>=",
  "stat:recoildirection:<=",
  "stat:recoildirection:>=",
  "stat:drawtime:<=",
  "stat:drawtime:>=",
  "stat:zoom:<=",
  "stat:zoom:>=",
  "stat:airborne:<=",
  "stat:airborne:>=",
  "stat:swingspeed:<=",
  "stat:swingspeed:>=",
  "stat:guardefficiency:<=",
  "stat:guardefficiency:>=",
  "stat:guardresistance:<=",
  "stat:guardresistance:>=",
  "stat:chargerate:<=",
  "stat:chargerate:>=",
  "stat:guardendurance:<=",
  "stat:guardendurance:>=",
  "stat:ammocapacity:<=",
  "stat:ammocapacity:>=",
  "stat:mobility:<=",
  "stat:mobility:>=",
  "stat:resilience:<=",
  "stat:resilience:>=",
  "stat:recovery:<=",
  "stat:recovery:>=",
  "stat:discipline:<=",
  "stat:discipline:>=",
  "stat:intellect:<=",
  "stat:intellect:>=",
  "stat:strength:<=",
  "stat:strength:>=",
  "stat:total:<=",
  "stat:total:>=",
  "stat:custom:<=",
  "stat:custom:>=",
  "stat:any:<=",
  "stat:any:>=",
]
`;

exports[`filterComplete autocomplete terms for |stat:mob| 1`] = `
Array [
  "stat:mobility:",
]
`;

exports[`filterComplete autocomplete terms for |stat| 1`] = `
Array [
  "stat:",
  "is:statlower",
  "basestat:",
  "maxstatloadout:",
  "maxstatvalue:",
  "maxbasestatvalue:",
  "maxstatloadout:mobility",
  "maxstatloadout:resilience",
  "maxstatloadout:recovery",
  "maxstatloadout:discipline",
  "maxstatloadout:intellect",
  "maxstatloadout:strength",
  "maxstatloadout:total",
  "maxstatloadout:custom",
  "maxstatloadout:any",
  "maxstatvalue:mobility",
  "maxstatvalue:resilience",
  "maxstatvalue:recovery",
  "maxstatvalue:discipline",
  "maxstatvalue:intellect",
  "maxstatvalue:strength",
  "maxstatvalue:total",
  "maxstatvalue:custom",
  "maxstatvalue:any",
  "maxbasestatvalue:mobility",
  "maxbasestatvalue:resilience",
  "maxbasestatvalue:recovery",
  "maxbasestatvalue:discipline",
  "maxbasestatvalue:intellect",
  "maxbasestatvalue:strength",
  "maxbasestatvalue:total",
  "maxbasestatvalue:custom",
  "maxbasestatvalue:any",
  "is:customstatlower",
  "stat:rpm:",
  "stat:rof:",
  "stat:charge:",
  "stat:impact:",
  "stat:handling:",
  "stat:range:",
  "stat:stability:",
  "stat:reload:",
  "stat:magazine:",
  "stat:aimassist:",
  "stat:equipspeed:",
  "stat:shieldduration:",
  "stat:velocity:",
  "stat:blastradius:",
  "stat:recoildirection:",
  "stat:drawtime:",
  "stat:zoom:",
  "stat:airborne:",
  "stat:swingspeed:",
  "stat:guardefficiency:",
  "stat:guardresistance:",
  "stat:chargerate:",
  "stat:guardendurance:",
  "stat:ammocapacity:",
  "stat:mobility:",
  "stat:resilience:",
  "stat:recovery:",
  "stat:discipline:",
  "stat:intellect:",
  "stat:strength:",
  "stat:total:",
  "stat:custom:",
  "stat:any:",
  "basestat:mobility:",
  "basestat:resilience:",
  "basestat:recovery:",
  "basestat:discipline:",
  "basestat:intellect:",
  "basestat:strength:",
  "basestat:total:",
  "basestat:custom:",
  "basestat:any:",
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query || 1`] = `
Array [
  "recent saved",
  "yearold saved",
  "0 days old, 9 uses",
  "0 days old, 8 uses",
  "dayold highuse",
  "0 days old, 7 uses",
  "1 days old, 9 uses",
  "1 days old, 8 uses",
  "0 days old, 6 uses",
  "1 days old, 7 uses",
  "2 days old, 9 uses",
  "2 days old, 8 uses",
  "1 days old, 6 uses",
  "2 days old, 7 uses",
  "3 days old, 9 uses",
  "0 days old, 5 uses",
  "3 days old, 8 uses",
  "2 days old, 6 uses",
  "3 days old, 7 uses",
  "4 days old, 9 uses",
  "1 days old, 5 uses",
  "4 days old, 8 uses",
  "3 days old, 6 uses",
  "4 days old, 7 uses",
  "5 days old, 9 uses",
  "2 days old, 5 uses",
  "5 days old, 8 uses",
  "4 days old, 6 uses",
  "0 days old, 4 uses",
  "5 days old, 7 uses",
  "6 days old, 9 uses",
  "3 days old, 5 uses",
  "6 days old, 8 uses",
  "5 days old, 6 uses",
  "1 days old, 4 uses",
  "6 days old, 7 uses",
  "7 days old, 9 uses",
  "4 days old, 5 uses",
  "7 days old, 8 uses",
  "6 days old, 6 uses",
  "2 days old, 4 uses",
  "7 days old, 7 uses",
  "8 days old, 9 uses",
  "5 days old, 5 uses",
  "8 days old, 8 uses",
  "7 days old, 6 uses",
  "3 days old, 4 uses",
  "8 days old, 7 uses",
  "9 days old, 9 uses",
  "6 days old, 5 uses",
  "9 days old, 8 uses",
  "8 days old, 6 uses",
  "4 days old, 4 uses",
  "9 days old, 7 uses",
  "10 days old, 9 uses",
  "0 days old, 3 uses",
  "7 days old, 5 uses",
  "10 days old, 8 uses",
  "9 days old, 6 uses",
  "5 days old, 4 uses",
  "10 days old, 7 uses",
  "11 days old, 9 uses",
  "1 days old, 3 uses",
  "8 days old, 5 uses",
  "11 days old, 8 uses",
  "10 days old, 6 uses",
  "6 days old, 4 uses",
  "11 days old, 7 uses",
  "12 days old, 9 uses",
  "2 days old, 3 uses",
  "9 days old, 5 uses",
  "12 days old, 8 uses",
  "11 days old, 6 uses",
  "7 days old, 4 uses",
  "12 days old, 7 uses",
  "13 days old, 9 uses",
  "3 days old, 3 uses",
  "10 days old, 5 uses",
  "13 days old, 8 uses",
  "12 days old, 6 uses",
  "8 days old, 4 uses",
  "13 days old, 7 uses",
  "14 days old, 9 uses",
  "4 days old, 3 uses",
  "11 days old, 5 uses",
  "14 days old, 8 uses",
  "13 days old, 6 uses",
  "9 days old, 4 uses",
  "14 days old, 7 uses",
  "15 days old, 9 uses",
  "5 days old, 3 uses",
  "12 days old, 5 uses",
  "15 days old, 8 uses",
  "14 days old, 6 uses",
  "10 days old, 4 uses",
  "15 days old, 7 uses",
  "16 days old, 9 uses",
  "6 days old, 3 uses",
  "13 days old, 5 uses",
  "16 days old, 8 uses",
  "15 days old, 6 uses",
  "11 days old, 4 uses",
  "16 days old, 7 uses",
  "17 days old, 9 uses",
  "7 days old, 3 uses",
  "14 days old, 5 uses",
  "17 days old, 8 uses",
  "0 days old, 2 uses",
  "16 days old, 6 uses",
  "12 days old, 4 uses",
  "17 days old, 7 uses",
  "18 days old, 9 uses",
  "8 days old, 3 uses",
  "15 days old, 5 uses",
  "18 days old, 8 uses",
  "1 days old, 2 uses",
  "17 days old, 6 uses",
  "13 days old, 4 uses",
  "18 days old, 7 uses",
  "19 days old, 9 uses",
  "9 days old, 3 uses",
  "16 days old, 5 uses",
  "19 days old, 8 uses",
  "2 days old, 2 uses",
  "18 days old, 6 uses",
  "14 days old, 4 uses",
  "19 days old, 7 uses",
  "20 days old, 9 uses",
  "10 days old, 3 uses",
  "17 days old, 5 uses",
  "20 days old, 8 uses",
  "3 days old, 2 uses",
  "19 days old, 6 uses",
  "15 days old, 4 uses",
  "20 days old, 7 uses",
  "21 days old, 9 uses",
  "11 days old, 3 uses",
  "18 days old, 5 uses",
  "21 days old, 8 uses",
  "4 days old, 2 uses",
  "20 days old, 6 uses",
  "16 days old, 4 uses",
  "21 days old, 7 uses",
  "22 days old, 9 uses",
  "12 days old, 3 uses",
  "19 days old, 5 uses",
  "22 days old, 8 uses",
  "5 days old, 2 uses",
  "21 days old, 6 uses",
  "17 days old, 4 uses",
  "22 days old, 7 uses",
  "23 days old, 9 uses",
  "13 days old, 3 uses",
  "20 days old, 5 uses",
  "23 days old, 8 uses",
  "6 days old, 2 uses",
  "22 days old, 6 uses",
  "18 days old, 4 uses",
  "23 days old, 7 uses",
  "24 days old, 9 uses",
  "14 days old, 3 uses",
  "21 days old, 5 uses",
  "24 days old, 8 uses",
  "7 days old, 2 uses",
  "23 days old, 6 uses",
  "19 days old, 4 uses",
  "24 days old, 7 uses",
  "25 days old, 9 uses",
  "15 days old, 3 uses",
  "22 days old, 5 uses",
  "25 days old, 8 uses",
  "8 days old, 2 uses",
  "24 days old, 6 uses",
  "20 days old, 4 uses",
  "25 days old, 7 uses",
  "26 days old, 9 uses",
  "16 days old, 3 uses",
  "23 days old, 5 uses",
  "26 days old, 8 uses",
  "9 days old, 2 uses",
  "25 days old, 6 uses",
  "21 days old, 4 uses",
  "26 days old, 7 uses",
  "27 days old, 9 uses",
  "17 days old, 3 uses",
  "24 days old, 5 uses",
  "27 days old, 8 uses",
  "10 days old, 2 uses",
  "26 days old, 6 uses",
  "22 days old, 4 uses",
  "27 days old, 7 uses",
  "28 days old, 9 uses",
  "18 days old, 3 uses",
  "25 days old, 5 uses",
  "28 days old, 8 uses",
  "11 days old, 2 uses",
  "27 days old, 6 uses",
  "23 days old, 4 uses",
  "28 days old, 7 uses",
  "29 days old, 9 uses",
  "19 days old, 3 uses",
  "26 days old, 5 uses",
  "29 days old, 8 uses",
  "12 days old, 2 uses",
  "28 days old, 6 uses",
  "24 days old, 4 uses",
  "29 days old, 7 uses",
  "20 days old, 3 uses",
  "27 days old, 5 uses",
  "13 days old, 2 uses",
  "29 days old, 6 uses",
  "25 days old, 4 uses",
  "21 days old, 3 uses",
  "28 days old, 5 uses",
  "14 days old, 2 uses",
  "26 days old, 4 uses",
  "22 days old, 3 uses",
  "29 days old, 5 uses",
  "15 days old, 2 uses",
  "27 days old, 4 uses",
  "0 days old, 1 uses",
  "23 days old, 3 uses",
  "16 days old, 2 uses",
  "28 days old, 4 uses",
  "1 days old, 1 uses",
  "24 days old, 3 uses",
  "17 days old, 2 uses",
  "29 days old, 4 uses",
  "2 days old, 1 uses",
  "25 days old, 3 uses",
  "18 days old, 2 uses",
  "3 days old, 1 uses",
  "26 days old, 3 uses",
  "19 days old, 2 uses",
  "4 days old, 1 uses",
  "27 days old, 3 uses",
  "20 days old, 2 uses",
  "5 days old, 1 uses",
  "28 days old, 3 uses",
  "21 days old, 2 uses",
  "6 days old, 1 uses",
  "29 days old, 3 uses",
  "22 days old, 2 uses",
  "7 days old, 1 uses",
  "23 days old, 2 uses",
  "8 days old, 1 uses",
  "24 days old, 2 uses",
  "9 days old, 1 uses",
  "25 days old, 2 uses",
  "10 days old, 1 uses",
  "26 days old, 2 uses",
  "11 days old, 1 uses",
  "27 days old, 2 uses",
  "12 days old, 1 uses",
  "28 days old, 2 uses",
  "13 days old, 1 uses",
  "29 days old, 2 uses",
  "14 days old, 1 uses",
  "15 days old, 1 uses",
  "16 days old, 1 uses",
  "17 days old, 1 uses",
  "18 days old, 1 uses",
  "19 days old, 1 uses",
  "20 days old, 1 uses",
  "21 days old, 1 uses",
  "22 days old, 1 uses",
  "23 days old, 1 uses",
  "24 days old, 1 uses",
  "25 days old, 1 uses",
  "26 days old, 1 uses",
  "27 days old, 1 uses",
  "28 days old, 1 uses",
  "29 days old, 1 uses",
  "yearold highuse",
  "yearold unsaved",
  "dim api autosuggest",
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query |high| 1`] = `
Array [
  "dayold highuse",
  "yearold highuse",
]
`;
